--- a/src/Components/Logos/logos.css
+++ b/src/Components/Logos/logos.css
@@ -2,7 +2,15 @@
     display: flex;
     justify-content: center;
 }
-
 .container > img {
     width: 200px;
+}
+
+.container_refundid {
+    display: flex;
+    justify-content: center;
+}
+
+.container_refundid > img {
+    width: 100px;
 }
